Fixed bug #34950 (Unable to get WSDL through proxy)