ext/soap/php_sdl.c
@@ -17,7 +17,7 @@
   |          Dmitry Stogov <dmitry@zend.com>                             |
   +----------------------------------------------------------------------+
 */
-/* $Id: php_sdl.c,v 1.88 2005/08/03 14:07:48 sniper Exp $ */
+/* $Id: php_sdl.c,v 1.89 2005/10/24 07:43:48 dmitry Exp $ */
 
 #include "php_soap.h"
 #include "ext/libxml/php_libxml.h"
@@ -2235,6 +2235,7 @@ sdlPtr get_sdl(zval *this_ptr, char *uri TSRMLS_DC)
 		smart_str_appends(&proxy,Z_STRVAL_PP(proxy_host));
 		smart_str_appends(&proxy,":");
 		smart_str_appends(&proxy,Z_STRVAL(str_port));
+		smart_str_0(&proxy);
 		zval_dtor(&str_port);
 		MAKE_STD_ZVAL(str_proxy);
 		ZVAL_STRING(str_proxy, proxy.c, 1);
@@ -2244,6 +2245,11 @@ sdlPtr get_sdl(zval *this_ptr, char *uri TSRMLS_DC)
 			context = php_stream_context_alloc();
 		}
 		php_stream_context_set_option(context, "http", "proxy", str_proxy);
+		zval_ptr_dtor(&str_proxy);
+
+		MAKE_STD_ZVAL(str_proxy);
+		ZVAL_BOOL(str_proxy, 1);
+		php_stream_context_set_option(context, "http", "request_fulluri", str_proxy);
 		zval_ptr_dtor(&str_proxy);
 
 		proxy_authentication(this_ptr, &headers TSRMLS_CC);
